<resources>
    <string name="app_name">KotlinSimpleCRUD</string>
    <string name="lorem">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="title">Name</string>
    <string name="body">Quote</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="fab">Fab</string>
    <string name="student_empty">Student Empty</string>
    <string name="student_name">Student Name</string>
    <string name="about">About</string>
    <string name="fiqih_firdaus_maulana">Fiqih Firdaus Maulana</string>
    <string name="nim_fiqih">1814311051</string>
    <string name="joenathan_dwiki_al_afandi">Joenathan Dwiki Al Afandi</string>
    <string name="nim_joe">1814311034</string>
    <string name="saffa">Annuril Rahma Safa Ati</string>
    <string name="nim_saffa">1814311019</string>
    <string name="nama_kelompok">Nama Kelompok :</string>
    <string name="fiq">Fiqih Firdaus Maulana - 1814311051</string>
    <string name="jo">Joenathan Dwiki Al Afandi - 1814311034</string>
    <string name="saf">Annuril Rahma Safa Ati - 1814311019</string>
    <string name="nim">NIM</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="id">ID</string>
    <string name="example">example</string>
    <string name="name">NAME</string>
    <string name="email_address">EMAIL</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile">Profile</string>
</resources>