<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">
    <ImageView
        android:id="@+id/image"
        android:src="@drawable/logo_ubharaa"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/tv_fiqih"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fiq"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/pb"/>

    <TextView
        android:id="@+id/tv_joe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jo"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/tv_fiqih"/>

    <TextView
        android:id="@+id/tv_saffa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saf"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/tv_joe"/>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:padding="6dp"
        android:layout_margin="10dp"
        android:layout_width="45dp"
        android:layout_height="45dp" />

</RelativeLayout>